// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render LogInForm correctly 1`] = `
<div
  className="not-logged-in"
>
  <form
    className="not-logged-in__group form"
    onSubmit={[Function]}
  >
    <div
      className="form__group"
    >
      <label
        htmlFor="name"
      >
        Name
      </label>
      <input
        className="form__input"
        id="name"
        onChange={[Function]}
        placeholder="Your name"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form__group u-margin-bottom-large"
    >
      <label
        htmlFor="password"
      >
        Password
      </label>
      <input
        className="form__input"
        id="password"
        onChange={[Function]}
        placeholder="Password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="btn btn--white"
      type="submit"
      value="Log In"
    />
  </form>
  <p
    className="not-logged-in__group"
  >
    OR
  </p>
  <button
    className="not-logged-in__group btn btn--green"
    onClick={[Function]}
  >
    Sign Up
  </button>
</div>
`;

exports[`should render error when authFailed is passed down with value 1`] = `
<div
  className="not-logged-in"
>
  <form
    className="not-logged-in__group form"
    onSubmit={[Function]}
  >
    <div
      className="form__group"
    >
      <label
        htmlFor="name"
      >
        Name
      </label>
      <input
        className="form__input"
        id="name"
        onChange={[Function]}
        placeholder="Your name"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form__group u-margin-bottom-large"
    >
      <label
        htmlFor="password"
      >
        Password
      </label>
      <input
        className="form__input"
        id="password"
        onChange={[Function]}
        placeholder="Password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="btn btn--white"
      type="submit"
      value="Log In"
    />
  </form>
  <p
    className="not-logged-in__group"
  >
    OR
  </p>
  <button
    className="not-logged-in__group btn btn--green"
    onClick={[Function]}
  >
    Sign Up
  </button>
  <p
    className="auth-error"
  >
    Wrong name or password.
  </p>
</div>
`;
